--- a/index.html
+++ b/index.html
@@ -1,28 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="./css/home.css" />
-    <!-- <meta charset="UTF-8"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Portfolio Page</title>
+    <script>
+      window.location.replace("https://ashpect.notion.site/Hi-I-am-Ashish-4af23bcefab14e86a6fd581a41871478?pvs=74");
+    </script>
   </head>
   <body>
-    <div class="container">
-        <div class="main-picture">
-            <img src="./pics/img.jpg">
-        </div>
-        <div class="containerin1">
-          <div class="maintext">
-            <div class="helloo">Hello, I am</div>
-            <div class="name">Ashish Kumar</div>
-            <div class="devlabs">Developer at SDSLabs</div>
-          </div>
-          <div class="linemaidalo">
-            <div class="aboutme"><a href="./html/aboutme.html">About Me</a></div>
-            <div class="project"><a href="blog.ashpect.me">Blogs</a></div>
-            <div class="contactme"><a href="./html/contactme.html">Contact Me</a></div>
-          </div>
-        </div>
-    </div>
-    <br><br><br><br><br><br><br><br><br><br>
+    <p>Redirecting to <a href="https://b.com">b.com</a>...</p>
   </body>
 </html>
