Add images folder for easy photo editing

--- a/vl/index.html
+++ b/vl/index.html
@@ -564,22 +564,22 @@
             <div class="polaroid-container">
                 <div class="polaroid">
                     <div class="tape"></div>
-                    <img src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=400&h=400&fit=crop" alt="Cat">
+                    <img src="images/photo1.jpg" alt="Photo 1">
                     <span class="caption">You + cats = obsession 🐱</span>
                 </div>
                 <div class="polaroid">
                     <div class="tape"></div>
-                    <img src="https://images.unsplash.com/photo-1606312619070-d48b4c652a52?w=400&h=400&fit=crop" alt="Chocolate">
+                    <img src="images/photo2.jpg" alt="Photo 2">
                     <span class="caption">Your true love (before me) 🍫</span>
                 </div>
                 <div class="polaroid">
                     <div class="tape"></div>
-                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=400&h=400&fit=crop" alt="Yarn">
+                    <img src="images/photo3.jpg" alt="Photo 3">
                     <span class="caption">Weekend plans: yarn chaos 🧶</span>
                 </div>
                 <div class="polaroid">
                     <div class="tape"></div>
-                    <img src="https://images.unsplash.com/photo-1516589178581-6cd7833ae3b2?w=400&h=400&fit=crop" alt="Us">
+                    <img src="images/photo4.jpg" alt="Photo 4">
                     <span class="caption">Us being us 💕</span>
                 </div>
             </div>
